--- a/style/global.css
+++ b/style/global.css
@@ -1,3 +1,25 @@
 :root {
     --elvebakken_blå: #74b2e1;
 }
+
+#fag_meny{
+    width: 2000px;
+    overflow: hidden;
+    background-color: var(--elvebakken_blå);
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1;
+    
+}
+#fag_meny > div{
+    height: 220px;
+    width: 150px;
+    text-align: center;
+    margin: 10px;
+    background-color: white;
+    border-radius: 10px;
+}
+#fag_meny > div> img{
+    width: 100%;
+    height: 60%;
+}
