--- a/style/global.css
+++ b/style/global.css
@@ -1,3 +1,21 @@
 :root {
     --elvebakken_blå: #74b2e1;
 }
+* {
+    margin: 0;
+}
+#forside {
+    position: relative;
+    display: grid;
+    top: 0;
+    left: 0;
+    background-color: var(--elvebakken_blå);
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+    align-items: center;
+    font-size: 2rem;
+}
+#forside h1 {
+    padding: 20px;
+}
