--- a/style/global.css
+++ b/style/global.css
@@ -11,13 +11,22 @@
     display: grid;
     top: 0;
     left: 0;
-    background-color: var(--elvebakken_blå);
+    background-color: rgba(255, 255, 255, 0.3);
+    background-image: url("/assets/imgs/forsidebilde_realfag.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-blend-mode: overlay;
     width: 100%;
     height: 100vh;
     text-align: center;
     align-items: center;
-    font-size: 2rem;
+    font-size: 3rem;
 }
 #forside h1 {
     padding: 20px;
+}
+@media (max-width: 710px) {
+    #forside h1{
+        font-size: 13vw;
+    }
 }
