--- a/style/global.css
+++ b/style/global.css
@@ -18,6 +18,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-blend-mode: overlay;
+    background-size: cover;
     width: 100%;
     height: 100vh;
     text-align: center;
@@ -41,10 +42,45 @@
     border: 2px solid var(--elvebakken_blå);
     font-size: 20px;
     line-height: 60px;
+    display: grid;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+#knapp img {
+    width: 45px;
+    height: 45px;
+    transform: rotate(180deg);
+    align-self: center;
+    justify-self: center;
+}
+#knapp:hover {
+    transform: translate(0px, 3px);
+}
+#elvebakken-logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 80px;
+    margin: 15px;
+}
+#elvebakken-logo img {
+    width: 100%;
 }
 @media (max-width: 600px) {
     #forside h1{
         font-size: 15vw;
+    }
+}
+@media (max-height: 400px) {
+    #forside #knapp {
+        width: 40px;
+        height: 40px;
+    }
+    #knapp img {
+        width: 30px;
+        height: 30px;
+    }
+    #elvebakken-logo {
+        width: 50px;
     }
 }
 #plassholder {
