--- a/style/forside.css
+++ b/style/forside.css
@@ -45,6 +45,7 @@
 .fag-tittel {
     color: var(--elvebakken_blå);
     font-size: 2.5rem;
+    margin-bottom: 5px;
 }
 
 .fag-sitat {
@@ -86,6 +87,7 @@
 
     .fag-info { 
         margin: 0px;
+        padding: 10px;
     }
 
     .fag-se-mer-knapp {
