Gjorde at pilen til høyre forsvinner
tok bredden av skjermen uten scrollebaren for å regne ut når knappen til høyre i menyen skulle skjules. Endret også posisjonen til begge knappene for å bla i menyen

--- a/style/global.css
+++ b/style/global.css
@@ -77,12 +77,13 @@
     height: 100%;
 }
 #høyre_bla_knapp{
-    right: 25px;
+    right: 20px;
     transform: rotate(90deg);
 }
 #venstre_bla_knapp{
     transform: rotate(-90deg);
     display: none;
+    left: 20px;
 }
 * {
     margin: 0;
