--- a/style/global.css
+++ b/style/global.css
@@ -11,6 +11,7 @@
 #fag_meny{
     overflow-x: auto;
     background-color: var(--elvebakken_blå);
+    /*background-image: url("/assets/imgs/elvebakken-logo-2024-25.jpg");*/
     padding: 15px;
     display: grid;
     grid-template-columns: repeat(16, 1fr);
@@ -18,6 +19,9 @@
     /*skjuler scrollebaren til fag_menyen for IE, Edge og Firefox */
     -ms-overflow-style: none;  /* IE og Edge */
     scrollbar-width: none;  /* Firefox */
+}
+#fag-meny-område{
+    margin: 50px 5% 0 5%;
 }
 /*skjuler scrollebaren til fag_menyen for Chrome, Safari og Opera*/
 #fag_meny::-webkit-scrollbar{
@@ -43,10 +47,22 @@
     padding-left: 10px;
     font-size: large;
 }
+#fag-meny-tittel{
+    display: flex;
+    align-items: end;
+}
+#fag-meny-tittel p{
+    padding-left: 10px;
+    padding-bottom: 5px;
+}
+#fag-meny-tittel p:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
 /*pil i lenkene til sidene om programfagene*/
 .lenke_pil{
     width: 30%;
-    margin: auto 10px;
+    margin: 30px 10px 10px 10px;
     /*Flytter pilen tilbake etter hover*/
     transform: translate(0px, 0px);
     transition-duration: 0.1s;
@@ -65,6 +81,7 @@
     height: 50px;
     border-radius: 10px;
     border: black solid 1px;
+    background-color: white;
 }
 /*hover-effekt for knappene man blar i menyen med*/
 .bla_knapp:hover, .bla_knapp:focus{
@@ -77,13 +94,13 @@
     height: 100%;
 }
 #høyre_bla_knapp{
-    right: 20px;
+    right: 35px;
     transform: rotate(90deg);
 }
 #venstre_bla_knapp{
     transform: rotate(-90deg);
     display: none;
-    left: 20px;
+    left: 35px;
 }
 * {
     margin: 0;
