--- a/style/forside.css
+++ b/style/forside.css
@@ -63,6 +63,9 @@
     cursor: pointer;
     margin-top: auto;
     font-size: 1.5rem;
+    text-align: center;
+    color: black;
+    text-decoration: none;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
