--- a/style/global.css
+++ b/style/global.css
@@ -14,7 +14,7 @@
     /*background-image: url("/assets/imgs/elvebakken-logo-2024-25.jpg");*/
     padding: 15px;
     display: grid;
-    grid-template-columns: repeat(16, 1fr);
+    grid-template-columns: repeat(8, 1fr); /*må endres til antall fag*/
     gap: 30px;
 
     /*skjuler scrollebaren til fag_menyen for IE, Edge og Firefox */
