Endret navn på index
byttet navn fra kjemi til index

--- a/style/kjemi.css
+++ b/style/kjemi.css
@@ -116,7 +116,7 @@
 .sentrale-temaer {
     grid-area: s;
 }
-.sentrale-temaer h3 {
+.informasjonsbokser h3 {
     font-size: 2rem;
 }
 .sentrale-temaer > ul > li {
