La til farger og lenker
la til flere fargevariabler og mer informasjon

--- a/style/global.css
+++ b/style/global.css
@@ -2,6 +2,8 @@
     --elvebakken_blå: #74b2e1;
     --elvebakken_blå_lys: #9CC9EB;
     --elvebakken_rosa: #DC8EB6;
+    --elvebakken_gul: #F0E691;
+    --elvebakken_oransje: #FAB965;
     --mørke_blå: #204B57;
     --mørke_grønn: #75DC98;
     --lyse_grønn: #89F1AC;
