--- a/style/global.css
+++ b/style/global.css
@@ -8,28 +8,30 @@
     --mørke_grønn: #75DC98;
     --lyse_grønn: #89F1AC;
 }
-*{
+* {
+    margin: 0;
     font-family: 'Oslo Sans', sans-serif;
+    scroll-behavior: smooth;
+    box-sizing: border-box;
 }
 #fag_meny{
     overflow-x: auto;
-    /* background-color: var(--elvebakken_blå); */
-    /*background-image: url("/assets/imgs/elvebakken-logo-2024-25.jpg");*/
     padding: 15px;
     display: grid;
-    grid-template-columns: repeat(8, 1fr); /*må endres til antall fag*/
+    grid-template-columns: repeat(8, 1fr); /* må endres til antall fag */
     gap: 30px;
 
-    /*skjuler scrollebaren til fag_menyen for IE, Edge og Firefox */
+    /* skjuler scrollebaren til fag_menyen for IE, Edge og Firefox */
     -ms-overflow-style: none;  /* IE og Edge */
     scrollbar-width: none;  /* Firefox */
 }
-#fag-meny-område{
-    margin: 50px 5% 0 5%;
-}
-/*skjuler scrollebaren til fag_menyen for Chrome, Safari og Opera*/
+/* skjuler scrollebaren til fag_menyen for Chrome, Safari og Opera */
 #fag_meny::-webkit-scrollbar{
     display: none;
+}
+/* området under intro-tekst, ned til de avlange programfag-boksene */
+#fag-meny-område{
+    margin: 50px 5% 0 5%;
 }
 /*lenke til de forskjellige valgfagene*/
 .fag_i_meny{
@@ -43,21 +45,24 @@
     /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-/*bilde i lenkene til de ulike programfagene*/
+/* bilde i lenkene til de ulike programfagene */
 .fag_bilde{
     width: 100%;
     height: 60%;
-    border-radius: 10px 10px 0 0; /*avrunder de øverste hjørnene*/
+    border-radius: 10px 10px 0 0; /* avrunder de øverste hjørnene */
 }  
+/* programfag-navnene i den øverste programfag-oversikten */
 #fag_meny p{
     padding-left: 10px;
     font-size: large;
 }
+/* programfag-oversikt-overskrift */
 #fag-meny-tittel{
     display: flex;
     align-items: end;
     margin-bottom: 15px;
 }
+/* "vis alle"-tekst ved siden av programfag-overskrift */
 #vis-alle{
     padding-left: 10px;
     padding-bottom: 5px;
@@ -66,7 +71,7 @@
     text-decoration: underline;
     cursor: pointer;
 }
-/*pil i lenkene til sidene om programfagene*/
+/* pil i lenkene til sidene om programfagene */
 .lenke_pil{
     width: 30%;
     position: absolute;
@@ -115,22 +120,17 @@
     display: none;
     left: 20px;
 }
-* {
-    margin: 0;
-    font-family: 'Oslo Sans', sans-serif;
-    scroll-behavior: smooth;
-    box-sizing: border-box;
-}
+/* bakgrunnsbilde øverst på siden */
 #forside {
     position: relative;
     display: grid;
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.3);
-    background-image: url("/assets/imgs/forsidebilde_realfag.jpg");
+    background-image: url("/assets/imgs/forsidebilde_realfag.jpg"); /* her kan bakgrunnsbilde endres */
     background-position: center;
     background-repeat: no-repeat;
-    background-blend-mode: overlay;
+    background-blend-mode: overlay; /* gir bakgrunnen en mørkere farge */
     background-size: cover;
     width: 100%;
     height: 100vh;
@@ -138,12 +138,14 @@
     align-items: center;
     font-size: 3rem;
 }
+/* overskrift øverst på skjermen */
 #forside h1 {
     padding: 20px;
     color: white;
     text-shadow: 2px 2px 5px rgb(0, 0, 0);
 }
-#forside #knapp {
+/* pil som tar deg nedover på siden i forside-seksjonen */
+#forside #ned-knapp {
     position: absolute;
     align-self: end;
     justify-self: center;
@@ -160,9 +162,11 @@
     clip-path: inset(0px -15px -15px 0px);*/
     cursor: pointer;
 }
-#forside #knapp:hover {
+/* flytter knapp nedover ved hover */
+#forside #ned-knapp:hover {
     bottom: 8%;
 }
+/* Elvebakken-logo i hjørnet øverst til venstre av skjermen */
 #elvebakken-logo {
     position: absolute;
     top: 0;
@@ -173,6 +177,7 @@
 #elvebakken-logo img {
     height: 100%;
 }
+/* endrer skriftstørrelse på overksrift, størrelse på logo, og fjerner logoen i footeren når bredden er under 700px */
 @media (max-width: 700px) {
     #forside h1{
         font-size: 15vw;
@@ -185,17 +190,13 @@
         display: none;
     }
 }
+/* gjør ned-knappen mindre når høyden på skjermen er mindre enn 400px */
 @media (max-height: 400px) {
-    #forside #knapp {
+    #forside #ned-knapp {
         width: 40px;
         height: 40px;
     }
-    #knapp img {
-        width: 30px;
-        height: 30px;
-    }
 }
-
 footer {
     position: relative;
     background-color: var(--elvebakken_blå);
