--- a/style/kjemi.css
+++ b/style/kjemi.css
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.3);
-    background-image: url("/assets/imgs/forsidebilde_realfag.jpg"); /* her kan bildet endres */
+    background-image: url("/assets/imgs/placeholder_kjemi.png"); /* her kan bildet endres */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
