Knapp med sick bakgrunn

--- a/style/kjemi.css
+++ b/style/kjemi.css
@@ -69,12 +69,30 @@
     text-decoration: none;
     color: black;
     border-radius: 15px;
-    font-size: larger;
+    font-size: 1.5rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+
+    transition: transform 0.2s;
 }
 /* gjøre knappene lysere ved hover */
 #fagnummer-knapper a:hover {
-    background-color: var(--elvebakken_blå_lys);
+    transform: translateY(-3px);
 }
+/* invividuel style for hver knapp */
+#første-fag {
+    background-color: var(--elvebakken_blå) !important;
+}
+#første-fag:hover {
+    background-color: var(--elvebakken_blå_lys) !important;
+}
+#andre-fag {
+    background-color: var(--mørke_grønn) !important;
+}
+#andre-fag:hover {
+    background-color: var(--lyse_grønn) !important;
+}
+
+
 /* får forsidebilde til å ta mindre plass av skjermen, gjør tekst under mindre og padding mindre når bredden er under 400px */
 @media (max-width: 400px) {
     #forside-bilde {
