--- a/style/kjemi.css
+++ b/style/kjemi.css
@@ -122,6 +122,7 @@
             "h h"
             "a a"
             "e m"
+            "d d"
             "i i";
     width: 100%;
     gap: 20px;
@@ -221,7 +222,12 @@
 .mer-informasjon li a:hover {
     color: var(--elvebakken_blå);
 }
+.divider-element {
+    background-color: var(--elvebakken_rosa) !important;
+    grid-area: d;
+}
 .interaktivt-element {
+    background-color: var(--elvebakken_blå_lys) !important;
     grid-area: i;
 }
 /* endrer boksplassering når bredden er under 700px og oppsettet i lenke-boksene og bildeboksene */
@@ -257,5 +263,8 @@
         margin: 0px;
         margin-bottom: 15px;
         border-radius: 15px;
+    }
+    .divider-element {
+        display: none;
     }
 }
