--- a/style/forside.css
+++ b/style/forside.css
@@ -148,9 +148,10 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 /* bilde i lenkene til de ulike programfagene */
-.fag_bilde{
+.fagmeny_bilde{
     width: 100%;
     height: 60%;
+    object-fit: cover;
     border-radius: 10px 10px 0 0; /* avrunder de øverste hjørnene */
 }  
 /* programfag-navnene i den øverste programfag-oversikten */
