Gjorde bilder mindre ved viss bredde
Bildene i avlangt element får høyde på 200px når bredden er under 700px

--- a/style/programfag.css
+++ b/style/programfag.css
@@ -251,12 +251,13 @@
     }
     .avlangt-visuelt-element {
        flex-direction: row;
-       padding-bottom: 0 !important; 
+       padding-bottom: 0 !important;
     }
     .avlangt-visuelt-element img{
         width: 100%;
         margin: 0px;
         margin-bottom: 15px;
         border-radius: 15px;
+        height: 200px;
     }
 }
