Oppdatert tekst Fyikk, endret fra teksten som allerede eksisterte på kjemi. Fikset også listen med sentrale temaer

--- a/style/kjemi.css
+++ b/style/kjemi.css
@@ -16,7 +16,8 @@
 .sentrale-temaer > ul {
     -webkit-padding-start: 0;
     padding-block: 1vw;
+    padding: 0 !important;
 }
 .sentrale-temaer li {
-    padding: 1vw;
+    padding: 1vw !important;
 }
