La til bilde i visuelt element i fysikk

--- a/style/fysikk.css
+++ b/style/fysikk.css
@@ -2,3 +2,9 @@
 #forside-bilde {
     background-image: url("/assets/imgs/fysikk/placeholder_fysikk.png"); /* her kan bildet endres */
 }
+.visuelt-element {
+    background-image: url("/assets/imgs/fysikk/placeholder_fysikk.png"); /* bilde kan byttes ut */
+}
+#fagnummer2 .visuelt-element {
+    background-image: url("/assets/imgs/fysikk/placeholder_fysikk.png"); /* bilde kan byttes ut */
+}
