Oppdatering for bedre kode pluss forskjeller mellom R og S
Endret rekkefølge på html-kode for å bruke flex istedenfor grid. Endret rekkefølge på importering av css-filer for å slippe å bruke !IMPORTANT.
La til forskjell mellom R og S i mattefagene

--- a/style/it.css
+++ b/style/it.css
@@ -8,3 +8,8 @@
 #fagnummer2 .visuelt-element {
     background-image: url("/assets/imgs/informasjonsteknologi/placeholder_IT.png"); /* bilde kan byttes ut */
 }
+@media(max-width: 1080px){
+    #forside-bilde {
+        font-size: 4vw;
+    }
+}
