--- a/style/kjemi.css
+++ b/style/kjemi.css
@@ -16,10 +16,10 @@
 .sentrale-temaer > ul {
     -webkit-padding-start: 0;
     padding-block: 1vw;
-    padding: 0 !important;
+    padding: 0;
 }
 .sentrale-temaer li {
-    padding: 1vw !important;
+    padding: 1vw;
 }
 
 /* Slideshow container */
