--- a/style/matte_s.css
+++ b/style/matte_s.css
@@ -8,3 +8,9 @@
 #fagnummer2 .visuelt-element {
     background-image: url("/assets/imgs/matte_s/matte_s_placeholder.png"); /* bilde kan byttes ut */
 }
+
+@media(max-width: 670px){
+    #forside-bilde {
+        font-size: 7vw;
+    }
+}
