--- a/style/tekforsk.css
+++ b/style/tekforsk.css
@@ -8,3 +8,8 @@
 #fagnummer2 .visuelt-element {
     background-image: url("/assets/imgs/teknologi_og_forskningslære/placeholder_tekforsk.png"); /* bilde kan byttes ut */
 }
+@media(max-width: 770px){
+    #forside-bilde {
+        font-size: 5.5vw;
+    }
+}
