Fikset bilde-karusell-greie til kjemisiden
La til en bilde-karusell lik den på den gamle nettsiden

--- a/style/programfag.css
+++ b/style/programfag.css
@@ -253,7 +253,7 @@
     grid-area: d;
 }
 .interaktivt-element {
-    background-color: var(--elvebakken_blå_lys) !important;
+    background-color: var(--lyse_grønn) !important;
     grid-area: i;
 }
 /* endrer boksplassering når bredden er under 700px og oppsettet i lenke-boksene og bildeboksene */
