--- a/style/kjemi.css
+++ b/style/kjemi.css
@@ -22,22 +22,32 @@
     padding: 1vw;
 }
 
-/* Slideshow container */
-.slideshow-container {
-    max-width: 1000px;
-    position: relative;
-    margin: auto;
+.carousel-container {
     padding-top: 10px;
+}
+/* Slideshow container */
+#slideshow-container {
+    position: relative;
+    height: 400px;
+    width: 100%;
 }
 
 /* Hide the images by default */
 .mySlides {
     display: none;
+    height: 100%;
+    margin: auto;
+    justify-items: center;
+    background-image: url("/assets/imgs/kjemi/bilde_fra_timen_1.jpg");
+    background-position: center;
+    border-radius: 15px;
+    background-blend-mode: overlay;
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 .mySlides img {
-    border-radius: 15px;
-    width: 100%;
+    height: 400px;
+    object-fit: cover;
 }
 
 /* Next & previous buttons */
