--- a/style/geofag.css
+++ b/style/geofag.css
@@ -1,3 +1,9 @@
+:root {
+    --geofag_blå: #2A2A72;
+    --geofag_grønn: #64F58D;
+    --geofag_sort: #232528;
+    --geofag_oransje: #F09642;
+}
 /* bakgrunnsbilde øverst på side */
 #forside-bilde {
     background-image: url("/assets/imgs/geofag/jordklode.png"); /* her kan bildet endres */
@@ -11,4 +17,17 @@
 .sentrale-temaer > ul > li{
     padding: 15px !important;
     font-size: 1.1rem;
+}
+.rask-oversikt, .divider-element {
+    background-color: var(--geofag_grønn) !important; 
+}
+.hvordan-jobber-vi, .interaktivt-element, #andre-fag {
+    background-color: var(--geofag_blå) !important; /* overstyrer originalfarge */
+    color: white !important;
+}
+#andre-fag:hover {
+    background-color: #3E3E7D !important;
+}
+.mer-informasjon {
+    background-color: var(--geofag_oransje) !important; 
 }
