--- a/widgets/quiz-skjelett/quiz-skjelett.css
+++ b/widgets/quiz-skjelett/quiz-skjelett.css
@@ -1,35 +1,31 @@
 #panel {
-    margin-top: 2%;
+    padding-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     color: navy;
+    width: auto;
 }
 #spørsmål {
     text-align: center;
-    font-size: 2rem;
-    width: 50%;
-    margin-bottom: 20px;
-    margin-top: 2%;
+    font-size: 32px;
+    margin: 20px;
 }
-#alternativer {
+#alternativ-område {
     font-size: 20px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
-    margin-top: 10px;
-    margin-bottom: 20px;
+    margin: 10px;
 }
-@media (max-width:500px){
-    #alternativer {
-        display: flex;
-        flex-direction: column;
-    }
-}
+
 .alternativ {
     background-color: var(--elvebakken_rosa);
     padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
 }
 .alternativ:hover {
@@ -38,8 +34,8 @@
 }
 button {
     align-self: center;
-    margin-top: 2%;
-    font-size: 1.5rem;
+    margin-top: 20px;
+    font-size: 24px;
     padding: 10px 20px;
     background-color: var(--elvebakken_blå);
     border: none;
@@ -51,8 +47,8 @@ button:hover {
 #spill-igjen-knapp {
     display: none;
 }
-#score {
+#poeng {
     font-size: 30px;
     color: darkslategray;
-    margin-top: 2%;
+    margin-top: 20px;
 }
